# FloraTraiter

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  const.py  pyproject.toml  setup.py
.github/workflows/: python-app.yml
args/: bug_hunt.bash  parse_labels.args  parse_treatments.bash
doc/: Traits_extracted.odt  overview.odp  rafe_halloween_checklist.docx  schema.dia
flora/: _make_symlinks.py  _update_pyproject_toml.py  bug_hunt.py  clean_text.py  efloras_downloader.py  efloras_trait_extractor.py  fix_page_nos.py  mimosa_extract_traits.py  parse_label_text.py  parse_labels.py  parse_text.py  parse_traits.py  parse_treatments.py  pdf_to_images.py  slice.py  stitch.py  util_add_taxon_terms.py  util_traits_find_with_rules.py  xhtml_to_text.py
flora/pylib/: const.py  darwin_core.py  dwc.py  image_transformer.py  label.py  labels.py  log.py  ner.py  parser.py  pipeline.py  prepare_data.py  sentence_pipeline.py  spin_box.py  text_assembler.py  trait_util.py  treatment.py  treatments.py  validate_args.py
flora/pylib/ad_hoc/: gap_analysis.py
flora/pylib/efloras/: const.py  efloras_pipeline.py
flora/pylib/mimosa/: const.py  ocr.py  pipeline.py  sentence_pipeline.py
flora/pylib/pipelines/: flora_pipeline.py  full_pipeline.py  mimosa_pipeline.py  small_pipeline.py
flora/pylib/readers/: efloras_reader.py  (+4 more)
notebooks/: merge_bels_data.ipynb  merge_idigbio_data.ipynb
output/efloras/: Casuarinaceae_2020-10-06.html  Juglandaceae_2020-10-06.html  Myricaceae_2020-10-06.html  efloras_Myricaceae_2020-08-24a.html
parse/: images_to_text.py  pdf_to_xhtml.py  rename_pdfs.py
pylib/: efloras_reader.py  mimosa_base_reader.py  mimosa_marked_reader.py
tests/: pipeline.py  setup.py
tests/dwc/: test_admin_unit.py  test_color.py  test_count.py  test_duration.py  test_flower_location.py  test_flower_morphology.py  test_habit.py  test_id_number.py  test_job.py  test_leaf_duration.py  test_leaf_folding.py  test_locality.py  test_margin.py  test_morphology.py  test_part.py  test_part_location.py  test_reproduction.py  test_sex.py  test_shape.py  test_size.py  test_subpart.py  test_surface.py  test_taxon.py  test_taxon_like.py  test_venation.py  test_woodiness.py
tests/parsing/: test_admin_unit.py  test_associated_taxon.py  test_collector.py  test_count.py  test_count_suffix.py  test_determiner.py  test_habit.py  test_id_number.py  test_locality.py  test_margin.py  test_other_jobs.py  test_part.py  test_part_linker.py  test_part_location.py  test_reproduction.py  test_shape.py  test_size.py  test_subpart.py  test_subpart_linker.py  test_surface.py  test_taxon.py  test_taxon_like.py  test_taxon_like_linker.py
tests/rules/: test_admin_unit.py  test_associated_taxon.py  test_collector.py  test_count.py  test_count_suffix.py  test_determiner.py  test_habit.py  test_id_number.py  test_locality.py  test_margin.py  test_name.py  test_other_jobs.py  test_part.py  test_part_linker.py  test_part_location.py  test_reproduction.py  test_shape.py  test_size.py  test_subpart.py  test_subpart_linker.py  test_surface.py  test_taxon.py  test_taxon_like.py  test_taxon_like_linker.py
tests/traits/: test_admin_unit.py  test_associated_taxon.py  test_collector.py  test_count.py  test_count_suffix.py  test_determiner.py  test_habit.py  test_label.py  test_locality.py  test_location.py  test_margin.py  test_other_jobs.py  test_part.py  test_part_linker.py  test_part_location.py  test_phrase.py  test_reproduction.py  test_shape.py  test_size.py  test_subpart.py  test_subpart_linker.py  test_surface.py  test_taxon.py  test_taxon_like.py  test_taxon_like_linker.py
(+203 files in other folders)
