[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "FloraTraiter"
version = "1.3.0"
readme = "README.md"
description = ""
license = {file = "LICENSE"}
authors = [{name="Raphael LaFrance", email="raphael.lafrance@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "Jinja2",
    "beautifulsoup4",
    "customtkinter",
    "ftfy",
    "lxml",
    "numpy",
    "pandas",
    "pillow",
    "pytesseract",
    "python-dateutil",
    "regex",
    "rich",
    "scikit-image",
    "scipy",
    "spacy",
    "tomlkit",
    "tqdm",
]
optional-dependencies.dev = [
    "neovim",
    "pre-commit",
    "pre-commit-hooks",
    "python-lsp-server[all]",
    "ruff",
]

[tool.common_utils]
base-dependencies = [
    "Jinja2",
    "beautifulsoup4",
    "numpy",
    "pandas",
    "regex",
    "spacy",
    "tqdm",
]

[tool.setuptools]
py-modules = []

[tool.common_utils]
base-dependencies = [
    "numpy",
    "pandas",
    "python-dateutil",
    "regex",
    "scikit-image",
    "scipy",
    "spacy",
    "tqdm",
]

[tool.ruff]
target-version = "py311"

show-fixes = true

select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "S",
    "BLE",
    "FBT",
    "B",
#    "A",
    "COM",
    "C4",
    "T10",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
#    "ARG",
    "PTH",
    "TD",
    "FIX",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
#    "FURB",
#    "LOG",
    "RUF",
]

ignore = [
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D212",
    "ISC001",
    "N818",
    "PD901",
    "PLR0913",
    "PLW2901",
    "PLW0603",
    "PT009",
    "RET504",
    "RUF001",
    "SIM114",
    "SIM117",
    "SLF001",
    "T201",
]
